syntax = "proto3";

package okapi.proofs.v1;

option csharp_namespace = "Okapi.V1.Proofs";
option go_package = "github.com/trinsic-id/okapi";
option java_package = "trinsic.okapi.proofs";
option java_multiple_files = true;

import "okapi/keys/v1/keys.proto";
import "google/protobuf/struct.proto";

enum LdSuite {
    LD_SUITE_UNSPECIFIED = 0;
    LD_SUITE_JCSED25519SIGNATURE2020 = 1;
}

message CreateProofRequest {
    // The input JSON document that will be used
    // to create the LD Proof. This document must
    // also contain a "proof" object, with the desired
    // values filled in.
    google.protobuf.Struct document = 1;

    // The signer of the proof. This field must include
    // the 'kid' in full URI format.
    // Example:
    //  did:example:alice#key-1
    okapi.keys.v1.JsonWebKey key = 3;

    // The LD Suite to use to produce this proof
    LdSuite suite = 4;
}

message CreateProofResponse {
    google.protobuf.Struct signed_document = 1;
}

message VerifyProofRequest {
}

message VerifyProofResponse {
}